<?xml version="1.0"?>
<package format="2">
  <name>autonomous_vehicle</name>
  <version>0.1.0</version>
  <description>An autonomous vehicle project using Raspberry Pi and ROS 2.</description>
  
  <maintainer email="eng23ra0065@dsu.edu.in">R.U.N.S</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Use exec_depend for runtime dependencies -->
  <exec_depend>gpiozero</exec_depend>
  <exec_depend>opencv-python</exec_depend>  <!-- Uncomment if using OpenCV -->

  <!-- Optional: Add test dependencies -->
  <test_depend>ament_lint</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

</package>

